--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "passport": "^0.2.1",
     "passport-oauth": "^1.0.0",
     "json-2-csv": "^2.0.0",
-    "js-yaml": "3.5.5 "
+    "js-yaml": "3.5.5 ",
+    "async": "2.0.0-rc.2"
   }
 }
