--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "passport-oauth": "^1.0.0",
     "json-2-csv": "^2.0.0",
     "js-yaml": "3.5.5 ",
-    "async": "2.0.0-rc.2"
+    "async": "2.0.0-rc.2",
+    "selenium-webdriver": "2.53.2"
   }
 }
