--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "js-yaml": "3.5.5 ",
     "async": "2.0.0-rc.2",
     "selenium-webdriver": "2.53.2",
-    "line-reader": "0.4.0"
+    "line-reader": "0.4.0",
+    "mkdirp": "0.5.1"
   }
 }
