--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "fs": "0.0.2",
     "body-parser": "^1.14.0",
     "https": "^1.0.0",
-    "jawbone-up": "^0.1.2",
-    "passport": "^0.2.1",
+    "jawbone-up": "git+https://git@github.com/DukeMobileTech/node-jawbone-up/#master",
+    "passport": "^0.2.1", 
     "passport-oauth": "^1.0.0",
     "json-2-csv": "^2.0.0",
     "js-yaml": "3.5.5 ",
     "async": "2.0.0-rc.2",
     "archiver": "1.3.0",
     "mime": "1.3.4",
-    "path": "0.12.7"
+    "path": "0.12.7",
+    "winston": "2.3.1",
+    "express-winston": "2.1.3"
   }
 }
