--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "path": "0.12.7",
     "winston": "2.3.1",
     "express-winston": "2.1.3"
+  },
+  "engines": {
+    "node": "6.9.x",
+    "npm": "3.10.x"
   }
 }
