--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.0.1",
   "description": "Download detailed user data from Jawbone UP into a csv file",
   "main": "server.js",
+  "author": "Leonard Ng'eno",
+  "license": "MIT",
   "scripts": {
     "start": "node server.js"
   },
-  "author": "Leonard Ng'eno",
-  "license": "MIT",
+  "devDependencies": {
+    "standard": "8.6.0"
+  },
   "dependencies": {
     "ejs": "^2.3.1",
     "express": "^4.13.4",
