refactor server.js file

--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "body-parser": "^1.14.0",
     "https": "^1.0.0",
     "jawbone-up": "^0.1.2",
-    "passport": "^0.2.1",
-    "passport-oauth": "^1.0.0",
-    "json-2-csv": "^2.0.0",
+    "passport": "0.3.2",
+    "passport-oauth": "1.0.0",
+    "json-2-csv": "2.1.0",
     "js-yaml": "3.5.5 ",
     "async": "2.0.0-rc.2",
     "selenium-webdriver": "3.3.0",
