--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "fs": "0.0.2",
     "body-parser": "^1.14.0",
     "https": "^1.0.0",
-    "jawbone-up": "^0.1.2",
+    "jawbone-up": "git+https://git@github.com/DukeMobileTech/node-jawbone-up/#master",
     "passport": "0.3.2",
     "passport-oauth": "1.0.0",
     "json-2-csv": "2.1.0",
